--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
   "dependencies": {
+    "chalk": "^2.1.0",
     "commander": "^2.11.0",
-    "simple-git": "^1.75.0",
-    "chalk": "^2.1.0"
+    "simple-git": "^1.75.0"
   },
   "name": "feature-deployer",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "main": "feature-deployer.js",
   "bin": {
     "feature-deployer": "feature-deployer.js"
   },
+  "scripts": {
+    "integration": "cucumberjs",
+    "integration:watch": "yarn integration && watch -p 'commands/*.js' -c 'yarn integration'"
+  },
   "author": "Lucas Barboza <lucas.barboza@sprinklr.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "cucumber": "^2.0.0-rc.7",
+    "sinon": "^4.1.3",
+    "watch-cli": "^0.2.3"
+  }
 }
