--- a/package.json
+++ b/package.json
@@ -12,14 +12,37 @@
   },
   "scripts": {
     "integration": "cucumberjs",
-    "integration:watch": "yarn integration && watch -p 'commands/*.js' -c 'yarn integration'"
+    "integration:watch": "yarn integration && watch -p 'commands/*.js' -c 'yarn integration'",
+    "cover": "nyc yarn integration",
+    "validate": "yarn cover"
   },
   "author": "Lucas Barboza <lucas.barboza@sprinklr.com>",
   "license": "MIT",
   "devDependencies": {
     "chai": "^4.1.2",
     "cucumber": "^2.0.0-rc.7",
+    "nyc": "^8.4.0",
     "sinon": "^4.1.3",
     "watch-cli": "^0.2.3"
+  },
+  "nyc": {
+    "check-coverage": true,
+    "per-file": true,
+    "cache": true,
+    "all": false,
+    "exclude": [
+      "feature-deployer.js",
+      "node_modules",
+      "coverage"
+    ],
+    "lines": 75,
+    "statements": 75,
+    "functions": 75,
+    "branches": 10,
+    "reporter": [
+      "lcov",
+      "text",
+      "text-summary"
+    ]
   }
 }
