--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
     "check-coverage": true,
     "per-file": true,
     "cache": true,
-    "all": false,
+    "all": true,
     "exclude": [
       "feature-deployer.js",
       "node_modules",
       "coverage"
     ],
-    "lines": 75,
-    "statements": 75,
-    "functions": 75,
-    "branches": 10,
+    "lines": 80,
+    "statements": 80,
+    "functions": 85,
+    "branches": 35,
     "reporter": [
       "lcov",
       "text",
