--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "cover": "nyc yarn integration",
     "validate": "yarn cover"
   },
-  "author": "Lucas Barboza <lucas.barboza@sprinklr.com>",
+  "author": "Tech team <infra@scup.com>",
   "license": "MIT",
   "devDependencies": {
     "chai": "^4.1.2",
-    "cucumber": "^2.0.0-rc.7",
-    "nyc": "^8.4.0",
+    "cucumber": "^4.0.0",
+    "nyc": "^11.4.1",
     "sinon": "^4.1.3",
     "watch-cli": "^0.2.3"
   },
