--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "feature-deployer",
   "version": "1.1.1",
-  "main": "feature-deployer.js",
+  "main": "feature-deployer-bin.js",
   "author": "Tech team <infra@scup.com>",
   "license": "Commercial",
   "private": true,
   "bin": {
-    "feature-deployer": "feature-deployer.js"
+    "feature-deployer": "feature-deployer-bin.js"
   },
   "scripts": {
     "integration": "cucumberjs",
@@ -18,9 +18,9 @@
     "node": ">=9.4.0"
   },
   "dependencies": {
-    "chalk": "^2.1.0",
-    "commander": "^2.11.0",
-    "simple-git": "^1.75.0"
+    "chalk": "^2.3.0",
+    "commander": "^2.13.0",
+    "simple-git": "^1.89.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
