--- a/package.json
+++ b/package.json
@@ -35,17 +35,18 @@
   "nyc": {
     "check-coverage": true,
     "per-file": true,
-    "cache": true,
     "all": true,
     "exclude": [
-      "feature-deployer.js",
+      "feature-deployer-bin.js",
+      "**/*.help.js",
+      "Infra/commands/deploy-feature.js",
       "node_modules",
       "coverage"
     ],
-    "lines": 80,
-    "statements": 80,
-    "functions": 85,
-    "branches": 35,
+    "lines": 100,
+    "statements": 100,
+    "functions": 100,
+    "branches": 100,
     "reporter": [
       "lcov",
       "text",
