--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "feature-deployer": "feature-deployer-bin.js"
   },
   "scripts": {
-    "integration": "TZ=utc cucumber-js",
+    "integration": "LOG_LEVEL=error TZ=utc cucumber-js",
     "integration:watch": "yarn integration && watch -p 'commands/*.js' -c 'yarn integration'",
     "cover": "nyc yarn integration",
     "lint": "standard -v \"commands/**/*.js\" \"features/**/*.js\" \"Domain/**/*.js\" \"Infra/**/*.js\"",
@@ -22,7 +22,8 @@
   "dependencies": {
     "chalk": "^2.3.0",
     "commander": "^2.13.0",
-    "simple-git": "^1.89.0"
+    "simple-git": "^1.89.0",
+    "winston": "^3.0.0-rc1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
