--- a/package.json
+++ b/package.json
@@ -1,44 +1,56 @@
 {
-  "dependencies": {
-    "chalk": "^2.1.0",
-    "commander": "^2.11.0",
-    "simple-git": "^1.75.0"
-  },
   "name": "feature-deployer",
   "version": "1.1.1",
-  "main": "feature-deployer.js",
+  "main": "feature-deployer-bin.js",
+  "author": "Tech team <infra@scup.com>",
+  "license": "Commercial",
+  "private": true,
   "bin": {
-    "feature-deployer": "feature-deployer.js"
+    "feature-deployer": "feature-deployer-bin.js"
   },
   "scripts": {
-    "integration": "cucumberjs",
+    "test-unitary": "NODE_ENV=test LOG_LEVEL=error TZ=utc mocha --colors --reporter min \"Domain/**/*.test.js\" \"Infra/**/*.test.js\"",
+    "integration": "NODE_ENV=test LOG_LEVEL=error TZ=utc cucumber-js",
     "integration:watch": "yarn integration && watch -p 'commands/*.js' -c 'yarn integration'",
-    "cover": "nyc yarn integration",
-    "validate": "yarn cover"
+    "test": "yarn test-unitary && yarn integration",
+    "cover": "nyc yarn test",
+    "lint": "standard -v \"commands/**/*.js\" \"features/**/*.js\" \"Domain/**/*.js\" \"Infra/**/*.js\"",
+    "lint:fix": "yarn lint --fix",
+    "validate": "yarn lint && yarn cover"
   },
-  "author": "Lucas Barboza <lucas.barboza@sprinklr.com>",
-  "license": "MIT",
+  "engines": {
+    "node": ">=9.4.0"
+  },
+  "dependencies": {
+    "chalk": "^2.3.0",
+    "commander": "^2.13.0",
+    "simple-git": "^1.89.0",
+    "winston": "^3.0.0-rc1"
+  },
   "devDependencies": {
     "chai": "^4.1.2",
-    "cucumber": "^2.0.0-rc.7",
-    "nyc": "^8.4.0",
+    "cucumber": "^4.0.0",
+    "mocha": "^5.0.0",
+    "nyc": "^11.4.1",
     "sinon": "^4.1.3",
+    "standard": "^10.0.3",
     "watch-cli": "^0.2.3"
   },
   "nyc": {
     "check-coverage": true,
     "per-file": true,
-    "cache": true,
     "all": true,
     "exclude": [
-      "feature-deployer.js",
+      "feature-deployer-bin.js",
+      "**/*.help.js",
+      "Infra/commands/deploy-feature.js",
       "node_modules",
       "coverage"
     ],
-    "lines": 80,
-    "statements": 80,
-    "functions": 85,
-    "branches": 35,
+    "lines": 100,
+    "statements": 100,
+    "functions": 100,
+    "branches": 100,
     "reporter": [
       "lcov",
       "text",
