--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "cucumber": "^4.0.0",
+    "faker": "^4.1.0",
     "mocha": "^5.0.0",
     "nyc": "^11.4.1",
     "sinon": "^4.1.3",
