--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "all": true,
     "exclude": [
       "feature-deployer-bin.js",
+      "older-feature-deployer-bin.js",
       "**/*.help.js",
       "Infra/commands/deploy-feature.js",
       "node_modules",
