--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "faker": "^4.1.0",
     "mocha": "^5.0.0",
     "nyc": "^11.4.1",
+    "rosie": "^1.6.0",
     "sinon": "^4.1.3",
     "standard": "^10.0.3",
     "watch-cli": "^0.2.3"
